// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update-input-value-content renders correctly 1`] = `
<div>
  <div
    className="css-lz4b3k-Label"
  >
    coding_criteria__item_meta_data_automated_rule
  </div>
  <div
    className="css-144d3w0-UpdateInputValueContent"
  >
    <div
      className="css-1f6p2vj-Heading"
    >
      coding_models__create_item_label_rating_type_automated_input_value
    </div>
    <div
      className="css-2ywgiw-Text"
    >
      coding_models__create_item_label_rating_type_automated_input_value_hint
    </div>
    <div
      className="css-p6jqd2-UpdateInputValueContent"
    >
      <div
        className="css-1v0z0k-ReadonlyActionField"
        data-testid="readonly-action-field"
        onClick={[Function]}
      >
        <div
          className="css-1bkess4-ReadonlyActionField"
        >
          <div
            className="css-47wnmy-ReadonlyActionField"
          >
            document
          </div>
        </div>
        <div
          className="content-wrapper css-b45n67-ReadonlyActionField"
        >
          <div
            className="content css-1hje2zc-ReadonlyActionField"
          >
            <div
              className="css-1bkess4-ReadonlyActionField"
            >
              <div
                className="css-1lrzij5-Icon"
                dangerouslySetInnerHTML={
                  {
                    "__html": {},
                  }
                }
              />
              <div
                className="css-17zbm7y-Text"
              >
                viewer_tools__calc_type_label
              </div>
            </div>
          </div>
          <button
            className="readonly-action-button css-4nv627-Button"
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="css-95j2hm-Button"
            >
              edit_button
            </div>
          </button>
        </div>
      </div>
      <div
        className="css-1v0z0k-ReadonlyActionField"
        data-testid="readonly-action-field"
      >
        <div
          className="css-1bkess4-ReadonlyActionField"
        >
          <div
            className="css-47wnmy-ReadonlyActionField"
          >
            erp__cell_short
          </div>
        </div>
        <div
          className="content-wrapper css-b45n67-ReadonlyActionField"
        >
          <div
            className="content css-1147qp7-ReadonlyActionField"
          >
            <div
              className="css-1bkess4-ReadonlyActionField"
            >
              <div
                className="css-17zbm7y-Text"
              >
                coding_models__automated_item_input_value_preview_spreadsheet_whole_table
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-17as3x0"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="css-13s2sfk-Heading"
        >
          coding_models__automated_item_input_value_value
        </div>
        <div
          className="css-1unfqpo"
        >
          <input
            className="css-pkbj54"
            defaultValue="test"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
          />
          <div
            className="css-1wfdxtz-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
            onClick={[Function]}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`update-input-value-content renders correctly with selected cell 1`] = `
<div>
  <div
    className="css-lz4b3k-Label"
  >
    coding_criteria__item_meta_data_automated_rule
  </div>
  <div
    className="css-144d3w0-UpdateInputValueContent"
  >
    <div
      className="css-1f6p2vj-Heading"
    >
      coding_models__create_item_label_rating_type_automated_input_value
    </div>
    <div
      className="css-2ywgiw-Text"
    >
      coding_models__create_item_label_rating_type_automated_input_value_hint
    </div>
    <div
      className="css-p6jqd2-UpdateInputValueContent"
    >
      <div
        className="css-1v0z0k-ReadonlyActionField"
        data-testid="readonly-action-field"
        onClick={[Function]}
      >
        <div
          className="css-1bkess4-ReadonlyActionField"
        >
          <div
            className="css-47wnmy-ReadonlyActionField"
          >
            document
          </div>
        </div>
        <div
          className="content-wrapper css-b45n67-ReadonlyActionField"
        >
          <div
            className="content css-1hje2zc-ReadonlyActionField"
          >
            <div
              className="css-1bkess4-ReadonlyActionField"
            >
              <div
                className="css-1lrzij5-Icon"
                dangerouslySetInnerHTML={
                  {
                    "__html": {},
                  }
                }
              />
              <div
                className="css-17zbm7y-Text"
              >
                viewer_tools__calc_type_label
              </div>
            </div>
          </div>
          <button
            className="readonly-action-button css-4nv627-Button"
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="css-95j2hm-Button"
            >
              edit_button
            </div>
          </button>
        </div>
      </div>
      <div
        className="css-1v0z0k-ReadonlyActionField"
        data-testid="readonly-action-field"
      >
        <div
          className="css-1bkess4-ReadonlyActionField"
        >
          <div
            className="css-47wnmy-ReadonlyActionField"
          >
            erp__cell_short
          </div>
        </div>
        <div
          className="content-wrapper css-b45n67-ReadonlyActionField"
        >
          <div
            className="content css-1147qp7-ReadonlyActionField"
          >
            <div
              className="css-1bkess4-ReadonlyActionField"
            >
              <div
                className="css-17zbm7y-Text"
              >
                coding_models__automated_item_input_value_preview_spreadsheet_specific_cell
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-17as3x0"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="css-13s2sfk-Heading"
        >
          coding_models__automated_item_input_value_value
        </div>
        <div
          className="css-1unfqpo"
        >
          <input
            className="css-pkbj54"
            defaultValue="test"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
          />
          <div
            className="css-1wfdxtz-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
            onClick={[Function]}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
